# KITSUNE-Live-Subtitle

./: AI_RULES.md  ARCHITECTURE.md  PROJECT_CONSTITUTION.md  README.md
.cursor/rules/: project.mdc
apps/desktop/: pnpm-lock.yaml
apps/desktop/src/: App.css  App.tsx
apps/desktop/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/models/: .gitkeep
apps/desktop/src-tauri/src/: lib.rs  translation.rs
